# festival

./: .gitignore  .project  .travis.yml  Gruntfile.js  LICENSE  README.md  app.js  app.py  festival.py  festival.uwsgi  init.py  package.json  pyproject.toml  requirements.txt  routes.py  scanner.js  scanner.py  search.jade  settings.cfg  settings.js  settings.sample.cfg  test.py  webmusic.conf.default
api/: __init__.py  subsonic.py
api/api/: jsonix-context.js  subsonicjson.js
festival.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
festivallib/: coverurl.py  data.py  info.py  model.py  request.py  thumbs.py
lib/: coverurl.js  coverurl.py  data.js  data.py  model.py  request.js  request.py  settings.js  temp.js  thumbs.js  thumbs.py  uniqid.js
libs/: mediafile.py
libs/zipstream/: __init__.py
migrate/: __init__.py
model/: model.py
models/: albumart.js  track.js
public/images/: controls2.psd
public/js/: admin.js  ajax.js  angular-controller.js  angular-directive.js  angular-filter.js  angular-init.js  angular-lazy-img.js  bootstrap-slider.js  bootstrap.min.js  festival.min.js  init.js  jquery-ui-1.10.3.custom.min.js  jquery.ajaxprogress.js  jquery.easy.notification.js  jquery.fastsearch.js  jquery.hammer-full.min.js  jquery.hotkeys.js  (+12 more)
routes/: ajax.js  albumart.js  index.js  music.js
scripts/: festival.systemd.conf  festival.upstart.conf
templates/: index.html  index.jade  player.html  player.jade
test/: festival.db  settings.cfg
views/: index.jade  menu.jade  player.html  player.jade
wsgi/: festival.init.d  festival.systemd  festival.wsgi
(+39 files in other folders)
